fix: tag format

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,6 +1,7 @@
 {
   "branches": ["main", "master"],
   "ci": false,
+  "tagFormat": "microservice-chart-${version}",
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
