--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
         uses: cycjimmy/semantic-release-action@v2
         id: semantic
         with:
-          # dry_run: true
+          dry_run: true
           semantic_version: 18.0.0
           extra_plugins: |
             @semantic-release/release-notes-generator@10.0.3
@@ -53,16 +53,16 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Do something when a new release published
+        if: steps.semantic.outputs.new_release_published == 'true'
         run: |
           echo ${{ steps.semantic.outputs.new_release_version }}
           echo ${{ steps.semantic.outputs.new_release_major_version }}
           echo ${{ steps.semantic.outputs.new_release_minor_version }}
           echo ${{ steps.semantic.outputs.new_release_patch_version }}
+          yq -i ".version = \"${{ steps.semantic.outputs.new_release_version }}\"" ".chart/microservice-chart/Chart.yaml"
+          cat .chart/microservice-chart/Chart.yaml
 
       # - name: Run chart-releaser
       #   uses: helm/chart-releaser-action@v1.4.0
       #   env:
       #     CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-
-
-# test 
