--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,6 +61,9 @@ jobs:
           echo ${{ steps.semantic.outputs.new_release_patch_version }}
           yq -i ".version = \"${{ steps.semantic.outputs.new_release_version }}\"" "charts/microservice-chart/Chart.yaml"
           cat "charts/microservice-chart/Chart.yaml"
+          git add "charts/microservice-chart/Chart.yaml"
+          git commit -m "Bumb microservice chart version ${{ steps.semantic.outputs.new_release_version }}"
+          git push -u origin main
 
       # - name: Run chart-releaser
       #   uses: helm/chart-releaser-action@v1.4.0
