--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          persist-credentials: false
+          # persist-credentials: false
           fetch-depth: 0
+          token: ${{ secrets.RELEASE_TOKEN }}
+
       # issue: https://github.com/helm/chart-releaser-action/issues/113
       - name: Force tags download
         run: |
