--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          # persist-credentials: false
           fetch-depth: 0
           token: ${{ secrets.RELEASE_TOKEN }}
 
@@ -68,6 +67,7 @@ jobs:
           git push -u origin main
 
       - name: Run chart-releaser
+        if: steps.semantic.outputs.new_release_published == 'true'
         uses: helm/chart-releaser-action@v1.4.0
         env:
           CR_TOKEN: "${{ secrets.RELEASE_TOKEN }}"
