--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,12 +34,6 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-      - name: Setup Helm
-        run: |
-          curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
-          chmod 700 get_helm.sh
-          ./get_helm.sh
-
       - name: Semantic release
         uses: cycjimmy/semantic-release-action@v2
         id: semantic
@@ -59,6 +53,13 @@ jobs:
           git add "charts/microservice-chart/Chart.yaml"
           git commit -m "Bumb microservice chart version ${{ steps.semantic.outputs.new_release_version }}"
           git push -u origin main
+
+      - name: Setup Helm
+        if: steps.semantic.outputs.new_release_published == 'true'
+        run: |
+          curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
+          chmod 700 get_helm.sh
+          ./get_helm.sh
 
       - name: Run chart-releaser
         if: steps.semantic.outputs.new_release_published == 'true'
