--- a/charts/microservice-chart/templates/autoscaling.yaml
+++ b/charts/microservice-chart/templates/autoscaling.yaml
@@ -13,6 +13,8 @@ metadata:
   name: {{ include "microservice-chart.fullname" . }}
   labels:
     {{- include "microservice-chart.labels" . | nindent 3 }}
+  annotations: 
+    timestamp/now: "+%H:%M:%S %d/%m/%y"
 spec:
   scaleTargetRef:
     name: {{ include "microservice-chart.fullname" . }}
