--- a/charts/microservice-chart/templates/autoscaling.yaml
+++ b/charts/microservice-chart/templates/autoscaling.yaml
@@ -13,9 +13,8 @@ metadata:
   name: {{ include "microservice-chart.fullname" . }}
   labels:
     {{- include "microservice-chart.labels" . | nindent 3 }}
-  annotations: 
-    timestamp/now: "+%H:%M:%S %d/%m/%y"
-    "helm.sh/hook": post-install,post-upgrade
+  annotations:
+    helm.sh/hook: post-install,post-upgrade # fix updates on ScaledObject resource
 spec:
   scaleTargetRef:
     name: {{ include "microservice-chart.fullname" . }}
