--- a/charts/microservice-chart/templates/persistent-volume-claim.yaml
+++ b/charts/microservice-chart/templates/persistent-volume-claim.yaml
@@ -19,4 +19,7 @@ spec:
   storageClassName: "{{ .Values.persistence.storageClassName }}"
   {{- end }}
 {{- end }}
+{{- if .Values.persistence.volumeName }}
+  volumeName: "{{ .Values.persistence.volumeName }}"
+{{- end }}
 {{- end }}
