--- a/charts/microservice-chart/templates/persistent-volume.yaml
+++ b/charts/microservice-chart/templates/persistent-volume.yaml
@@ -2,21 +2,17 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ include "microservice-chart.fullname" . }}
+  name: {{ .Values.persistence.name }}
 spec:
   capacity:
     storage: {{ .Values.persistence.storage }}
   accessModes:
     - {{ .Values.persistence.accessModes }}
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: azurefile-csi
+  storageClassName: {{ default "default" .Values.persistence.storageClassName }}
   csi:
     driver: file.csi.azure.com
-    {{- if .Values.persistence.readOnly }}
-    readOnly: {{ .Values.persistence.readOnly }}
-    {{- else }}
-    readOnly: true
-    {{- end}}
+    readOnly: {{ default true .Values.persistence.readOnly }}
     volumeHandle: {{ .Values.persistence.volumeHandle }}  # make sure this volumeid is unique in the cluster
     {{- if .Values.persistence.volumeAttributes }}
     volumeAttributes:
@@ -24,12 +20,12 @@ spec:
       resourceGroup: {{ .Values.persistence.volumeAttributes.resourceGroup }}  # optional, only set this when storage account is not in the same resource group as agent node
       {{- end }}
       {{- if .Values.persistence.volumeAttributes.shareName }}
-      shareName: {{ .Values.persistence.shareName }}
+      shareName: {{ .Values.persistence.volumeAttributes.shareName }} # Azure file share name
       {{- end }}
     {{- end }}
     nodeStageSecretRef:
-      name: azure-secret
-      namespace: default
+      name: {{ include "microservice-chart.fullname" . }}
+      namespace: {{ .Values.namespace }}
   {{- if .Values.persistence.mountOptions }}
   mountOptions:
     {{- toYaml .Values.persistence.mountOptions | nindent 2 }}
