--- a/examples/progressive-delivery/helm/templates/configmaps.yaml
+++ b/examples/progressive-delivery/helm/templates/configmaps.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: progressive-delivery-mock-one
-  namespace: idpay
+  namespace: {{ .namespace }}
 data:
   # property-like keys; each key maps to a simple value
   player_initial_lives: "3"
@@ -11,25 +11,25 @@ data:
   # file-like keys
   game.properties: |
     enemy.types=aliens,monsters
-    player.maximum-lives=5    
+    player.maximum-lives=5
   user-interface.properties: |
     color.good=purple
     color.bad=yellow
-    allow.textmode=true  
+    allow.textmode=true
 
 ---
 
-kind: ConfigMap 
-apiVersion: v1 
+kind: ConfigMap
+apiVersion: v1
 metadata:
   name: progressive-delivery-example-two
-  namespace: idpay
+  namespace: {{ .namespace }}
 data:
   # Configuration values can be set as key-value properties
   database: mongodb
   database_uri: mongodb://localhost:27017
-  
+
   # Or set as complete file contents (even JSON!)
-  keys: | 
-    image.public.key=771 
+  keys: |
+    image.public.key=771
     rsa.public.key=42
