--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -166,6 +166,8 @@ ingress:
   forceSslRedirect: true
   # -- the rewrite target for ingress
   rewriteTarget: /$1
+  # -- the size allowed by nginx.ingress.kubernetes.io/proxy-body-size for client request body
+  proxyBodySize: 1m
 
 service:
   # -- (bool) create the service manifest
