--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -34,9 +34,11 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: app-port-{{ .Values.service.port }}
-              containerPort: {{ .Values.service.port }}
+          {{- range .Values.service.ports }}
+            - name: app-port-{{ . }}
+              containerPort: {{ . }}
               protocol: TCP
+          {{- end }}
           livenessProbe:
 {{ toYaml .Values.livenessProbe | indent 12 }}
           readinessProbe:
