breaking: Removed crt-mounter and fix ingress and service configuration (#76)
* aligned example progressive app with new values in rtd

* progressive-delivery: updated values

* removed crt containers and linked resources

* ingress: added proxyBodySize and annotations field

* ingress: added proxyBodySize and annotations field

* minor fix

* added architecture

* added changelog

* better readme

* dynamic ports

* added forceRedeploy in deployments

* updated progress-delivery example

--- a/charts/microservice-chart/templates/ingress.yaml
+++ b/charts/microservice-chart/templates/ingress.yaml
@@ -6,8 +6,12 @@ metadata:
   namespace: {{ .Values.namespace }}
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: {{ .Values.ingress.rewriteTarget }}
     nginx.ingress.kubernetes.io/force-ssl-redirect: {{ .Values.ingress.forceSslRedirect | quote }}
+    nginx.ingress.kubernetes.io/proxy-body-size: {{ .Values.ingress.proxyBodySize }}
+    nginx.ingress.kubernetes.io/rewrite-target: {{ .Values.ingress.rewriteTarget }}
+    {{- with .Values.ingress.annotations }}
+{{ toYaml . | indent 4 }}
+    {{- end }}
 spec:
   ingressClassName: nginx
   rules:
@@ -18,7 +22,7 @@ spec:
               service:
                 name: {{ include "microservice-chart.fullname" . }}
                 port:
-                  number: {{ .Values.service.port }}
+                  number: {{ .Values.ingress.servicePort }}
             path: {{ .Values.ingress.path }}
             pathType: {{ .Values.ingress.pathType }}
   tls:
