--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -20,6 +20,9 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
+        {{- if .Values.deployment.forceRedeploy }}
+        redeploy: {{ now | unixEpoch | quote }}
+        {{- end }}
         aadpodidbinding: "{{ .Values.namespace }}-pod-identity"
         {{- include "microservice-chart.selectorLabels" . | nindent 8 }}
     spec:
@@ -34,9 +37,11 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: app-port-{{ .Values.service.port }}
-              containerPort: {{ .Values.service.port }}
+          {{- range .Values.service.ports }}
+            - name: app-port-{{ . }}
+              containerPort: {{ . }}
               protocol: TCP
+          {{- end }}
           livenessProbe:
 {{ toYaml .Values.livenessProbe | indent 12 }}
           readinessProbe:
@@ -76,21 +81,6 @@ spec:
                   key: {{ $internVal }}
             {{- end }}
             {{- end }}
-        {{- if .Values.ingress.create }}
-        - name: crt-mounter
-          securityContext:
-            allowPrivilegeEscalation: false
-          image: alpine:3.16.1@sha256:9b2a28eb47540823042a2ba401386845089bb7b62a9637d55816132c4c3c36eb
-          command: ['tail', '-f', '/dev/null']
-          resources:
-            limits:
-              memory: 16Mi
-              cpu: 50m
-          volumeMounts:
-            - name: secrets-store-inline-crt
-              mountPath: "/mnt/secrets-store-crt"
-              readOnly: true
-        {{- end }}
         {{- with .Values.sidecars }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
@@ -102,15 +92,6 @@ spec:
             readOnly: true
             volumeAttributes:
               secretProviderClass: {{ include "microservice-chart.fullname" $ }}
-        {{- end }}
-        {{- if .Values.ingress.create }}
-        ### ingress tls cert
-        - name: secrets-store-inline-crt
-          csi:
-            driver: secrets-store.csi.k8s.io
-            readOnly: true
-            volumeAttributes:
-              secretProviderClass: {{ .Values.ingress.host | replace "." "-" }}-{{ include "microservice-chart.fullname" . }}
         {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
