--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -48,11 +48,22 @@ spec:
 {{ toYaml .Values.readinessProbe | indent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          {{- if .Values.envSecret }}
+          {{- if or .Values.envSecret .Values.fileConfig }}
           volumeMounts:
+            {{- if .Values.envSecret }}
             - name: secrets-store-inline
               mountPath: "/mnt/secrets-store"
               readOnly: true
+            {{- end }}
+            {{- if .Values.fileConfig }}
+            {{- range .Values.fileConfig }}
+            {{- range $path, $bytes := .Files.Glob (printf .)}}
+            {{- $name := base $path }}
+            - name: file-config
+              mountPath: "/mnt/file-config/"{{ $name }}
+              subPath: {{ $name }}
+            {{- end }}
+            {{- end }}
           {{- end }}
           env:
             #secrets
@@ -70,6 +81,13 @@ spec:
                 configMapKeyRef:
                   name: {{ include "microservice-chart.fullname" $ }}
                   key: {{ $key }}
+            {{- end }}
+            #field ref
+            {{- range $key, $val := .Values.envFieldRef }}
+            - name: {{ $key }}
+              valueFrom:
+                fieldRef:
+                  fieldPath: {{ $val }}
             {{- end }}
             #external configmap values
             {{- range $key, $valMap := .Values.envConfigMapExternals }}
@@ -92,6 +110,19 @@ spec:
             readOnly: true
             volumeAttributes:
               secretProviderClass: {{ include "microservice-chart.fullname" $ }}
+        {{- end }}
+        {{- if .Values.fileConfig -}}
+        - name: file-config
+          configMap:
+            name: {{ include "microservice-chart.fullname" $ }}-file-config
+            items:
+              {{- range .Values.fileConfig }}
+              {{- range $path, $bytes := .Files.Glob (printf .) }}
+              {{- $name := base $path }}
+              - key: {{ $name }}
+                path: {{ $name }}
+              {{- end }}
+              {{- end }}
         {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
