--- a/charts/microservice-chart/templates/beta-deployment.yaml
+++ b/charts/microservice-chart/templates/beta-deployment.yaml
@@ -48,17 +48,37 @@ spec:
 {{ toYaml .Values.readinessProbe | indent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          {{- if .Values.envSecret }}
+          {{- if or .Values.envSecret .Values.fileConfig }}
           volumeMounts:
+            {{- if .Values.envSecret }}
             - name: secrets-store-inline
               mountPath: "/mnt/secrets-store"
               readOnly: true
+            {{- end }}
+            {{- if .Values.fileConfig }}
+            {{- range $key, $val := .Values.fileConfig }}
+            - name: file-config
+              mountPath: "/mnt/file-config/{{ $key }}"
+              subPath: {{ $key }}
+              readOnly: true
+            {{- end }}
+            {{- end }}
           {{- end }}
-          {{- if .Values.canaryDelivery.deployment.envSecret }}
+          {{- if or .Values.canaryDelivery.deployment.envSecret .Values.canaryDelivery.deployment.fileConfig }}
           volumeMounts:
+            {{- if .Values.canaryDelivery.deployment.envSecret }}
             - name: beta-secrets-store-inline
               mountPath: "/mnt/beta-secrets-store"
               readOnly: true
+            {{- end }}
+            {{- if .Values.canaryDelivery.deployment.fileConfig }}
+            {{- range $key, $val := .Values.fileConfig }}
+            - name: beta-file-config
+              mountPath: "/mnt/beta-file-config/{{ $key }}"
+              subPath: {{ $key }}
+              readOnly: true
+            {{- end }}
+            {{- end }}
           {{- end }}
           env:
             # secrets from deployment
@@ -93,6 +113,20 @@ spec:
                   name: {{ include "microservice-chart.fullnameCanaryDelivery" $ }}
                   key: {{ $key }}
             {{- end }}
+            #field ref from deployment
+            {{- range $key, $val := .Values.envFieldRef }}
+            - name: {{ $key }}
+              valueFrom:
+                fieldRef:
+                  fieldPath: {{ $val }}
+            {{- end }}
+            #field ref from canary
+            {{- range $key, $val := .Values.canaryDelivery.deployment.envFieldRef }}
+            - name: {{ $key }}
+              valueFrom:
+                fieldRef:
+                  fieldPath: {{ $val }}
+            {{- end }}
             #external configmap values
             {{- range $key, $valMap := .Values.envConfigMapExternals }}
             {{- range $internKey, $internVal := $valMap }}
@@ -119,6 +153,28 @@ spec:
             readOnly: true
             volumeAttributes:
               secretProviderClass: {{ include "microservice-chart.fullname" $ }}
+        {{- end }}
+        {{- if .Values.fileConfig }}
+        - name: file-config
+          configMap:
+            name: {{ include "microservice-chart.fullname" $ }}
+            defaultMode: 420
+            items:
+          {{- range $key, $val := .Values.fileConfig }}
+              - key: {{ $key }}
+                path: {{ $key }}
+          {{- end }}
+        {{- end }}
+        {{- if .Values.canaryDelivery.deployment.fileConfig }}
+        - name: beta-file-config
+          configMap:
+            name: {{ include "microservice-chart.fullnameCanaryDelivery" $ }}
+            defaultMode: 420
+            items:
+          {{- range $key, $val := .Values.canaryDelivery.deployment.fileConfig }}
+              - key: {{ $key }}
+                path: {{ $key }}
+          {{- end }}
         {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
