--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -49,6 +49,10 @@ canaryDelivery:
     envConfig: {}
     # -- Environment secrets to use for the canary container
     envSecret: {}
+    # -- Environment config from k8s metadata for the canary container
+    envFieldRef: {}
+    # -- File config pattern to mount for the canary container
+    fileConfig: {}
     # -- (bool) Force redeploy canary container
     forceRedeploy: false
   # -- Beta/SecretProviderClass
@@ -134,6 +138,12 @@ envConfig: {}
 
 # -- Environment secrets to use for the canary container
 envSecret: {}
+
+# -- Environment config from k8s metadata
+envFieldRef: {}
+
+# -- File config pattern to mount
+fileConfig: {}
 
 podAnnotations: {}
 
