--- a/charts/microservice-chart/templates/secretproviderclass-kv.yaml
+++ b/charts/microservice-chart/templates/secretproviderclass-kv.yaml
@@ -15,6 +15,12 @@ spec:
       - key: {{ $objectName }}
         objectName: {{ $objectName }}
       {{- end }}
+      {{- if .Values.fileShare.create }}
+      - key: azurestorageaccountname
+        objectName: azurestorageaccountname
+      - key: azurestorageaccountkey
+        objectName: azurestorageaccountkey
+      {{- end }}
   parameters:
     usePodIdentity: "true"
     useVMManagedIdentity: "false"
@@ -27,6 +33,16 @@ spec:
         {{- range $key, $objectName := .Values.envSecret }}
         - |
           objectName: {{ $objectName }}
+          objectType: secret
+          objectVersion: ""
+        {{- end }}
+        {{- if .Values.fileShare.create }}
+        - |
+          objectName: azurestorageaccountname
+          objectType: secret
+          objectVersion: ""
+        - |
+          objectName: azurestorageaccountkey
           objectType: secret
           objectVersion: ""
         {{- end }}
