add fileShare for canary

--- a/charts/microservice-chart/templates/beta-deployment.yaml
+++ b/charts/microservice-chart/templates/beta-deployment.yaml
@@ -48,8 +48,10 @@ spec:
 {{ toYaml .Values.readinessProbe | indent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          {{- if or .Values.envSecret .Values.fileConfig }}
+          {{- if or .Values.envSecret .Values.fileConfig .Values.fileShare.create }}
           volumeMounts:
+            - name: tmp
+              mountPath: /tmp
             {{- if .Values.envSecret }}
             - name: secrets-store-inline
               mountPath: "/mnt/secrets-store"
@@ -63,8 +65,20 @@ spec:
               readOnly: true
             {{- end }}
             {{- end }}
+            {{- if .Values.fileShare.create }}
+            {{- range $k, $v := .Values.fileShare.folders }}
+            - name: file-azure-{{ $v.name }}
+              csi:
+                driver: file.csi.azure.com
+                readOnly: {{ $v.readOnly }}
+                volumeAttributes:
+                  secretName: {{ include "microservice-chart.fullname" $ }}
+                  shareName: {{ $v.name }}
+                  mountOptions: {{ $v.mountOptions }}
+            {{- end }}
+            {{- end }}
           {{- end }}
-          {{- if or .Values.canaryDelivery.deployment.envSecret .Values.canaryDelivery.deployment.fileConfig }}
+          {{- if or .Values.canaryDelivery.deployment.envSecret .Values.canaryDelivery.deployment.fileConfig .Values.canaryDelivery.deployment.fileShare.create }}
           volumeMounts:
             - name: tmp
               mountPath: /tmp
@@ -79,6 +93,18 @@ spec:
               mountPath: "/mnt/beta-file-config/{{ $key }}"
               subPath: {{ $key }}
               readOnly: true
+            {{- end }}
+            {{- end }}
+            {{- if .Values.canaryDelivery.deployment.fileShare.create }}
+            {{- range $k, $v := .Values.canaryDelivery.deployment.fileShare.folders }}
+            - name: file-azure-{{ $v.name }}
+              csi:
+                driver: file.csi.azure.com
+                readOnly: {{ $v.readOnly }}
+                volumeAttributes:
+                  secretName: {{ include "microservice-chart.fullnameCanaryDelivery" $ }}
+                  shareName: {{ $v.name }}
+                  mountOptions: {{ $v.mountOptions }}
             {{- end }}
             {{- end }}
           {{- end }}
