--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -30,6 +30,11 @@ canaryDelivery:
       headerValue: pagopa
       # -- the weight percent used into canary deployment. Can be used toghether with header
       weightPercent: 10
+  fileShare:
+    # -- (bool) create the service manifest for Canary/BlueGreen Deployment
+    create: false
+    # -- (list) Which fileshare use (! this name is used even inside the deployment) for Canary/BlueGreen Deployment
+    folders: [ ]
   service:
     # -- (bool) Beta/Enable Service for Canary/BlueGreen Deployment
     create: true
