add namespace for all object

--- a/charts/microservice-chart/templates/beta-secretproviderclass-kv.yaml
+++ b/charts/microservice-chart/templates/beta-secretproviderclass-kv.yaml
@@ -3,6 +3,7 @@ apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: {{ include "microservice-chart.fullnameCanaryDelivery" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "microservice-chart.labelsCanaryDelivery" . | nindent 4 }}
 spec:
