--- a/charts/microservice-chart/templates/autoscaling.yaml
+++ b/charts/microservice-chart/templates/autoscaling.yaml
@@ -3,6 +3,7 @@ apiVersion: keda.sh/v1alpha1
 kind: TriggerAuthentication
 metadata:
   name: {{ include "microservice-chart.fullname" . }}
+  namespace: {{ .Values.namespace }}
 spec:
   podIdentity:
     provider: azure
@@ -11,6 +12,7 @@ apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
   name: {{ include "microservice-chart.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "microservice-chart.labels" . | nindent 3 }}
   annotations:
