--- a/charts/microservice-chart/templates/serviceaccount.yaml
+++ b/charts/microservice-chart/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "microservice-chart.serviceAccountName" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "microservice-chart.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
